<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".activities.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|left">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:onClick="finishClick"
            android:padding="10dp"
            android:src="@drawable/close" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/maven_pro"
                    android:gravity="center|left"
                    android:paddingLeft="20dp"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp"
                    android:src="@drawable/download" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/maven_pro"
                    android:gravity="center|left"
                    android:paddingLeft="20dp"
                    android:text="@string/download"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="30dp"
                        android:background="@drawable/circle"
                        android:fontFamily="@font/maven_pro"
                        android:gravity="center"
                        android:text="@string/_5"
                        android:textColor="@color/red"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp"
                    android:src="@drawable/gift_code" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/maven_pro"
                    android:gravity="center|left"
                    android:paddingLeft="20dp"
                    android:text="@string/gift_code"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp"
                    android:src="@drawable/top_review" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/maven_pro"
                    android:gravity="center|left"
                    android:paddingLeft="20dp"
                    android:text="@string/top_review"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp"
                    android:src="@drawable/setting" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/maven_pro"
                    android:gravity="center|left"
                    android:paddingLeft="20dp"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp"
                    android:src="@drawable/support" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/maven_pro"
                    android:gravity="center|left"
                    android:paddingLeft="20dp"
                    android:text="@string/support"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="3dp"
                android:src="@drawable/signout" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/maven_pro"
                android:gravity="center|left"
                android:paddingLeft="20dp"
                android:text="@string/sign_out"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>