<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_black"
    tools:context=".activities.ProductDetailsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"

            android:src="@drawable/img1">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:onClick="clickBack"
                    android:padding="14dp"
                    android:src="@drawable/back" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="14dp"
                    android:src="@drawable/wishlist_black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/maven_pro_medium"
                android:gravity="center"
                android:text="@string/sweater_with_side_slits"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|right">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/maven_pro"
                        android:gravity="center|right"
                        android:text="@string/_69_90_usd"
                        android:textColor="@color/white"
                        android:textSize="22sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/mainPriceTV"
                       android:layout_marginLeft="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/maven_pro"
                        android:gravity="center|left"
                        android:text="@string/_80_0_usd"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/maven_pro"
                android:gravity="center"
                android:text="@string/this_all_season_sweater_will_quickly_become_one_of_your_go_tos_with_a_shaker_stitch_crew_neckline_and_side_slits_this_classic_yet_perfectly_cool_silhouette_pairs_easily_with_jeans"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/add_to_cart_background"
                android:fontFamily="@font/maven_pro"
                android:gravity="center"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>


    </FrameLayout>

</LinearLayout>